repaired parsing of public key retreived from DNS removed restricted BASE64Encoder from sun.misc eliminated compiler warnings some code (style) cleanup